infrastructure/prod-k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.nguyenth4nh.xyz
    - api.nguyenth4nh.xyz
    - id.nguyenth4nh.xyz
    secretName: nguyenth4nh-tls
  rules:
  - host: app.nguyenth4nh.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-clusterip
            port: 
              number: 3000
  - host: api.nguyenth4nh.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-clusterip
            port: 
              number: 80
  - host: id.nguyenth4nh.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: identity-clusterip
            port: 
              number: 80
